removed all play stuff and changed sbt config