@@ -1,28 +1,21 @@
-name := """AndrewSmithDotIo"""
-organization := "io.andrewsmith"
+val http4sVersion = "0.20.15"
 
-version := "1.1"
-maintainer := "andrewts129@gmail.com"
-
-lazy val root = project.in(file(".")).enablePlugins(PlayScala, SbtWeb, JavaAppPackaging)
-
-scalaVersion := "2.12.8"
-
-libraryDependencies ++= Seq(
-    guice,
-    ws,
-    evolutions,
-    jdbc,
-    "com.amazonaws" % "aws-java-sdk-s3" % "1.11.699",
-    "io.swaydb" %% "swaydb" % "0.11",
-    "org.xerial" % "sqlite-jdbc" % "3.28.0",
-    "io.getquill" %% "quill-jdbc" % "3.5.0"
-)
-
-pipelineStages in Assets := Seq()
-
-javaOptions ++= Seq(
-    "-Xmx128m",
-    "-XX:+UnlockExperimentalVMOptions",
-    "-XX:+UseCGroupMemoryLimitForHeap"
-)
+lazy val root = (project in file("."))
+  .settings(
+    name := "AndrewSmithDotIo",
+    organization := "io.andrewsmith",
+    version := "1.2",
+    scalaVersion := "2.12.8",
+    libraryDependencies ++= Seq(
+      "org.http4s" %% "http4s-dsl" % http4sVersion,
+      "org.http4s" %% "http4s-blaze-server" % http4sVersion,
+      "org.http4s" %% "http4s-blaze-client" % http4sVersion,
+      "org.http4s" %% "http4s-circe" % http4sVersion,
+      "org.http4s" %% "http4s-scalatags" % http4sVersion,
+      "io.circe" %% "circe-generic" % "0.12.3",
+      "ch.qos.logback" % "logback-classic" % "1.2.3",
+      "com.lihaoyi" %% "scalatags" % "0.8.3"
+    ),
+    scalacOptions ++= Seq("-Ypartial-unification")
+  )
+  .enablePlugins(SbtWeb, Http4sWebPlugin)
